--- a/index.html
+++ b/index.html
@@ -1,86 +1,144 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8">
-  <title>Telegram Gift Auction</title>
+<meta charset="UTF-8">
+<title>Telegram Gift Auction</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: #ffffff;
-      color: #000;
-      padding: 20px;
-    }
-
-    h1 {
-      margin-bottom: 5px;
-    }
-
-    #lot {
-      font-size: 18px;
-      margin-bottom: 10px;
-    }
-
-    #balance {
-      margin-bottom: 10px;
-    }
-
-    #timer {
-      font-size: 40px;
-      margin: 10px 0;
-    }
-
-    #bar {
-      width: 300px;
-      height: 8px;
-      background: #ddd;
-      margin-bottom: 10px;
-    }
-
-    #bar div {
-      height: 100%;
-      width: 100%;
-      background: #0088ff;
-      transition: width 1s linear;
-    }
-
-    button {
-      padding: 10px 16px;
-      font-size: 16px;
-      cursor: pointer;
-    }
-
-    #log {
-      margin-top: 20px;
-      border: 1px solid #ccc;
-      height: 200px;
-      overflow-y: auto;
-      padding: 8px;
-      font-size: 14px;
-    }
-  </style>
+<style>
+body {
+  margin: 0;
+  font-family: Arial, sans-serif;
+  background: #f2f2f2;
+}
+header {
+  background: #0088cc;
+  color: white;
+  padding: 14px;
+  text-align: center;
+}
+.container {
+  padding: 14px;
+}
+.lot {
+  background: white;
+  border-radius: 10px;
+  padding: 14px;
+  margin-bottom: 14px;
+  box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+}
+.lot h2 {
+  margin: 0 0 6px;
+}
+.timer {
+  color: red;
+  font-weight: bold;
+}
+input {
+  width: 100%;
+  padding: 10px;
+  margin-top: 6px;
+}
+button {
+  width: 100%;
+  margin-top: 6px;
+  padding: 10px;
+  background: #0088cc;
+  color: white;
+  border: none;
+  border-radius: 6px;
+}
+.log {
+  font-size: 14px;
+  margin-top: 6px;
+}
+</style>
 </head>
 
 <body>
 
-<h1>Telegram Gift Auction</h1>
-<p id="lot">Лот: 🚗 Tesla Model S</p>
+<header>
+  <h1>Telegram Gift Auction</h1>
+</header>
 
-<p>Баланс: <b id="balance">1000</b> TON</p>
-<p>Текущая ставка: <b><span id="bid">0</span> TON</b></p>
+<div class="container" id="lots"></div>
 
-<div id="timer">60</div>
+<script>
+const bots = ["Bot_Alpha", "Bot_X", "Bot_777", "Bot_Lux"];
 
-<div id="bar">
-  <div></div>
-</div>
+const lots = [
+  { id: 1, name: "🚗 Tesla Model X", price: 1000, time: 30 },
+  { id: 2, name: "🏠 Luxury House", price: 5000, time: 35 },
+  { id: 3, name: "📱 iPhone 15 Pro", price: 800, time: 25 },
+  { id: 4, name: "🏝️ Private Villa", price: 10000, time: 40 }
+];
 
-<button onclick="placeUserBid()">Сделать ставку</button>
+function render() {
+  const container = document.getElementById("lots");
+  container.innerHTML = "";
 
-<h3>Лог ставок</h3>
-<div id="log"></div>
+  lots.forEach(lot => {
+    container.innerHTML += `
+      <div class="lot">
+        <h2>${lot.name}</h2>
+        <p>Ставка: <b>$<span id="price-${lot.id}">${lot.price}</span></b></p>
+        <p>Время: <span class="timer" id="time-${lot.id}">${lot.time}</span> сек</p>
 
-<script src="script.js"></script>
+        <input type="number" id="input-${lot.id}" placeholder="Ваша ставка">
+        <button onclick="userBid(${lot.id})">Сделать ставку</button>
+
+        <div class="log" id="log-${lot.id}"></div>
+      </div>
+    `;
+  });
+}
+
+function userBid(id) {
+  const lot = lots.find(l => l.id === id);
+  const input = document.getElementById(`input-${id}`);
+  const bid = Number(input.value);
+
+  if (bid > lot.price) {
+    lot.price = bid;
+    document.getElementById(`price-${id}`).innerText = bid;
+    document.getElementById(`log-${id}`).innerText = "Вы сделали ставку";
+
+    if (lot.time < 5) lot.time += 5; // anti-sniping
+  }
+}
+
+function botBid() {
+  const lot = lots[Math.floor(Math.random() * lots.length)];
+  const bot = bots[Math.floor(Math.random() * bots.length)];
+  const bid = lot.price + Math.floor(Math.random() * 500 + 50);
+
+  lot.price = bid;
+  document.getElementById(`price-${lot.id}`).innerText = bid;
+  document.getElementById(`log-${lot.id}`).innerText =
+    bot + " сделал ставку $" + bid;
+
+  if (lot.time < 5) lot.time += 5;
+}
+
+function startTimers() {
+  setInterval(() => {
+    lots.forEach(lot => {
+      if (lot.time > 0) {
+        lot.time--;
+        document.getElementById(`time-${lot.id}`).innerText = lot.time;
+
+        if (lot.time === 0) {
+          alert("🎉 Лот выигран: " + lot.name);
+        }
+      }
+    });
+  }, 1000);
+}
+
+render();
+startTimers();
+setInterval(botBid, 6000);
+</script>
 
 </body>
 </html>
